Solve overflow bug

--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -40,7 +40,7 @@ button[type='submit'] {
 .gradient-1,
 .gradient-2,
 .gradient-3 {
-  @apply fixed;
+  @apply absolute;
 
   z-index: -1;
 }
@@ -57,7 +57,7 @@ button[type='submit'] {
 }
 
 .gradient-2 {
-  width: 70%;
+  // width: 70%;
   height: 100%;
   left: 20%;
   top: 20%;
@@ -67,7 +67,7 @@ button[type='submit'] {
 }
 
 .gradient-3 {
-  width: 90%;
+  // width: 90%;
   height: 432px;
   bottom: -32%;
   background: radial-gradient(50% 50% at 50% 50%, rgba(69, 100, 240, 0.2625) 0%, rgba(69, 100, 240, 0.1225) 43.45%, rgba(36, 45, 86, 0) 100%);
